# smarc2

./: .dockerignore  .gitmodules  README.md  smarc2_structure.json  smarc2_structure.md
.github/workflows/: build_in_docker.yml  docker-build.yml
behaviours/: README.md
behaviours/basic_depth_pitch_control/: README.md  package.xml  setup.cfg  setup.py
behaviours/basic_depth_pitch_control/basic_depth_pitch_control/: ActionClientNode.py  ActionServerControllerNode.py  ConvenienceView.py  DiveControllerNode.py  DivingModel.py  IDiveView.py  Node.py  SAMDiveView.py
behaviours/basic_depth_pitch_control/launch/: actionserver.launch
behaviours/basic_go_to_waypoint/: package.xml  setup.cfg  setup.py
behaviours/basic_go_to_waypoint/basic_go_to_waypoint/: ActionClientNode.py  ActionserverControllerNode.py  ConvenienceView.py  IThrustView.py  Node.py  SAMThrustView.py  ThrustyControllerNode.py  (+1 more)
behaviours/dive_control/: package.xml  setup.cfg  setup.py
behaviours/smarc_bt/: README.md  package.xml  setup.cfg  setup.py
behaviours/smarc_bt/launch/: smarc_bt.launch  test_sam_bt.launch
behaviours/smarc_bt/smarc_bt/: trunk.py
behaviours/smarc_bt/smarc_bt/bt/: actions.py  bb_keys.py  common.py  conditions.py  i_bb_updater.py  i_has_clock.py  i_has_vehicle_container.py  ros_bb_updater.py  ros_bt.py  sam_bb_updater.py  smarc_bt.py  trunk.py
behaviours/smarc_bt/smarc_bt/mission/: dubins_planner_caller.py  i_action_client.py  i_bb_mission_updater.py  i_mission_publisher.py  mission_plan.py  ros_action_goto_waypoint.py  ros_dubins_planner_caller.py  ros_goto_waypoint.py  ros_mission_plan.py  ros_mission_publisher.py  ros_mission_updater.py  ros_utm_lat_lon_converter_caller.py  ros_waypoint.py  utm_lat_lon_converter_caller.py  waypoint.py
behaviours/smarc_bt/smarc_bt/mission_handling/: mission_plan.py  ros_mission_plan.py
behaviours/smarc_bt/smarc_bt/vehicles/: ros_vehicle.py  sam_auv.py  sensor.py  vehicle.py
docker/: Dockerfile  README.md  build-me-smarc2.sh  defaults.yaml  dockerfile  empty_bringup.sh  ros_entrypoint.sh
documentation/: Installing ROS2.md  Making a new package.md  Porting a package.md  Python imports.md  README.md  ROS2 Workshop.md  Working with submodules.md  Writing a nice README.md
documentation/media/: SMaRC2 4 ROS2 Workshop.canvas
drivers/: README.md
examples/: README.md
examples/ros2_python_examples/: package.xml  setup.cfg  setup.py
examples/ros2_python_examples/launch/: basic_controller_example.launch
examples/ros2_python_examples/ros2_python_examples/: controller_controller.py  pid_controller_node.py  pid_model.py  sam_view.py
examples/ros2_python_examples/ros2_python_examples/geometry/: vector2.py
examples/ros2_python_examples/test/: test_model.py  test_testing.py
examples/sam_basic_controllers/: README.md
examples/workshopfun/: README.md  package.xml  setup.cfg  setup.py
examples/workshopfun/config/: scientific_configuration.yaml
examples/workshopfun/launch/: actionserver.launch  do_science.launch
examples/workshopfun/workshopfun/: ActionClientNode.py  ActionserverControllerNode.py  IThrustView.py  SAMThrustView.py  ThrustyControllerNode.py
examples/workshopfun/workshopfun/advanced_science/: IRPMModel.py  SuperAdvancedScienceModel.py
external_equipment/: README.md
external_packages/: README.md
gui/: README.md
gui/smarc_nodered/: .gitignore  LICENSE  README.md  package.xml  setup.cfg  setup.py
gui/smarc_nodered/config/: mqtt_config.yaml
gui/smarc_nodered/launch/: smarc_nodered.launch
gui/smarc_nodered/mqtt_nodered/: .gitignore  docker-compose.yaml
gui/smarc_nodered/mqtt_nodered/mapproxy/: mapproxy.yaml
gui/smarc_nodered/mqtt_nodered/mapserver/: process.py  sweden.map
gui/smarc_nodered/mqtt_nodered/mapserver/sweden/: .gitignore  process.py
gui/smarc_nodered/mqtt_nodered/node-red/: flows.json  flows_cred.json  package.json  settings.js
gui/smarc_nodered/mqtt_nodered/node-red/static/flight/css/: flightindicators.css
gui/smarc_nodered/mqtt_nodered/node-red/static/flight/js/: jquery.flightindicators.js
gui/smarc_nodered/src/: waraps_bridge.py
messages/: README.md
messages/control_msgs/: CMakeLists.txt  package.xml
messages/dead_reckoning_msgs/: CMakeLists.txt  README.md  package.xml
messages/sam_graph_slam_2_msgs/: CMakeLists.txt  README.md  package.xml
messages/sam_msgs/: CMakeLists.txt
messages/smarc_control_msgs/: CMakeLists.txt  README.md  package.xml
messages/smarc_mission_msgs/: CMakeLists.txt  package.xml
messages/smarc_mission_msgs/action/: GotoWaypoint.action
messages/smarc_mission_msgs/msg/: GotoWaypoint.msg  MissionControl.msg  Topics.msg
messages/smarc_mission_msgs/srv/: DubinsPlan.srv  UTMLatLon.srv
messages/smarc_msgs/: CMakeLists.txt  README.rst
navigation/dead_reckoning/: README.md
navigation/dead_reckoning/sam_dead_reckoning/: README.md  package.xml  setup.cfg  setup.py
navigation/dead_reckoning/sam_dead_reckoning/launch/: sam_dr_launch.launch  sam_dr_launch.py  testing_sam_dr_launch.py
navigation/dead_reckoning/sam_dead_reckoning/sam_dead_reckoning/: dr_node.py  dr_odom_2_lat_lon.py  gps_node.py  press_to_depth.py  sam_mm.py  sbg_imu_2_heading.py  sbg_imu_2_rpy_enu.py  visual_tools.py  yaw_enu_2_compass_heading.py
navigation/dead_reckoning/sam_dead_reckoning/sam_dead_reckoning/helpers/: ros_helpers.py
navigation/dead_reckoning/tf_convenience_topics/: CMakeLists.txt  README.md  package.xml
navigation/dead_reckoning/tf_convenience_topics/src/: odom_listener.cpp
navigation/localization/: README.md
scripts/: README.md  get-submodules.sh  get_latest_unity_standard.sh  launch_everything.py  list_launches.py  render_structure.py  rosdep_install_from_src.sh  unity_ros_bridge.sh
scripts/smarc_bringups/: README.md  package.xml  setup.cfg  setup.py
simulation/: README.md  unity_ros_bridge.sh
slam/: README.md
utilities/: README.md
utilities/dubins_planner/: README.md  package.xml  setup.cfg  setup.py
utilities/utm_latlon_converter/: package.xml  setup.cfg  setup.py
vehicles/: README.md
vehicles/bringups/: README.md
(+34 files in other folders)
