<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_python_examples</name>
  <version>0.0.1</version>
  <description>A simple package to demonstrate good practices in software design and ros2</description>
  <maintainer email="ozero@kth.se">Ozer Ozkahraman</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>tf_transformations</depend>
  <depend>python3-transforms3d</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
