<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>workshopfun</name>
  <version>0.0.0</version>
  <description>does nothing :D</description>
  <maintainer email="ozero@kth.se">ozer</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <depend>tf_transformations</depend>
  <depend>python3-transforms3d</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
