<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>smarc_nodered</name>
  <version>0.1.0</version>
  <description>The smarc_nodered package that connects the smarc software stack to nodered over mqtt</description>
  <maintainer email="ozero@kth.se">Ozer Ozkahraman</maintainer>
  <license>BSD</license>
  
  
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <!-- <depend>geographic_msgs</depend> -->
  <!-- <depend>visualization_msgs</depend> -->
  <!-- <depend>vision_msgs</depend> -->
    
  <!-- <depend>mqtt_bridge</depend> -->
  <!-- <depend>smarc_msgs</depend> -->
  <!-- <depend>lolo_msgs</depend> -->
   
  

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
