<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sam_dead_reckoning</name>
  <version>0.0.0</version>
  <description>Package contains the nodes required to consume IMU, GPS, and depth data to produce dead reckoning for the SAM AUV</description>
  <maintainer email="jvaldez@kth.se">julian</maintainer>
  <license>MIT</license>

  <exec_depend>geodesy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
